<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/title1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/langdon"
            android:text="@string/title"
            android:textAlignment="center"

            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/langdon"
            android:text="@string/Login"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="15sp" />
        <ImageView
            android:layout_width="100dp"
            android:layout_marginTop="10dp"
            android:layout_height="100dp"
            android:layout_marginLeft="150dp"
            android:layout_marginRight="100dp"
            android:background="@drawable/vehicle"/>



        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="100dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/round"
            android:ems="10"
            android:hint="@string/Email"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/light_grey" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/round"
            android:ems="10"
            android:hint="@string/Password"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/light_grey"
            android:inputType="textPassword" />


        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:background="@drawable/roundbtn"
            android:textColor="#ffffff"
            android:text="@string/Login" />

        <TextView
            android:id="@+id/create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:text="@string/newAccount" />

        <ProgressBar
            android:id="@+id/progressBar3"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:visibility="invisible"
            android:layout_height="wrap_content" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>