<resources>
    <string name="app_name">Car Crash Detection</string>
    <string name="description">Create New Account</string>
    <string name="Email">Email</string>
    <string name="Password">Passowrd</string>
    <string name="title">Car Crash Detection</string>
    <string name="phone">Phone Number</string>
    <string name="name">Name</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_Close">Close Navigation Drawer</string>
    <string name="alarm">Alarm</string>
    <string name="turn_off">Turn Off</string>
    <string name="Login">Login</string>
    <string name="newAccount">New Here? Create Account</string>
</resources>
