<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey">


        <ImageView
            android:layout_width="100dp"
            android:layout_marginTop="50dp"
            android:layout_height="100dp"
            android:layout_marginLeft="150dp"
            android:layout_marginRight="100dp"
            android:background="@drawable/vehicle"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/langdon"
            android:text="Create New Contact"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/nameContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="100dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/round"
            android:ems="10"
            android:hint="Name"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/light_grey" />


        <EditText
            android:id="@+id/phoneContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/round"
            android:ems="10"
            android:hint="Phone Number"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/light_grey"
            android:inputType="textPhonetic" />

        <Button
            android:id="@+id/uploadContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:background="@drawable/roundbtn"
            android:textColor="#ffffff"
            android:text="Add Contact" />



        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="invisible" />



</LinearLayout>